# pcl_recognition

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  add_coke.sh  ism_command.sh  package.xml  trained_ism_model.txt
include/pcl/filters/: uniform_sampling.h
include/pcl_recognition/: ObjectRecognizer.h  object_recognizer.h  pcl_recognition.h
launch/: ORK.launch  find_stool_coke.launch  object_recognition_kitchen.rviz  object_recognizer.rviz  object_recognizer_coke1.rviz  object_recognizer_coke2.rviz  object_recognizer_test1.launch  object_recognizer_test2.launch  stool_coke.rviz
pcd/: coke.ply  coke_bad.pcd  lidar.pcd  new_coke.pcd  trained_ism_model.txt
src/: ICP.cpp  ObjectRecognizer.cpp  cluster_extraction.cpp  correspondence_grouping.cpp  find_plane_pcd_file.cpp  global_hypothesis_verification.cpp  global_hypothesis_verification_ply.cpp  implicit_shape_model.cpp  ism_command.sh  object_recognition_kitchen.cpp  object_recognize_main.cpp  object_recognizer.cpp  pcd_edit_tool.cpp  pcl_recognition.cpp  pcl_utils.cpp  remove_outliers.cpp
